// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test FluxCredit should render correctly 1`] = `
<div>
  <mock-fluxplusmodal>
    <div
      class="content"
    >
      <img
        alt="Logged in"
        src="core-img/flux-plus/man-high-five.jpg"
      />
      <div
        class="head"
      >
        <div
          class="title"
        >
          Logged in
        </div>
        <div
          class="subtitle"
        >
          Thanks for being a valued member!
        </div>
      </div>
      <div
        class="info"
      >
        <div>
          Email
          : 
          <span
            class="email"
          >
            test123@gmail.com
          </span>
        </div>
        <div
          class="credit-container"
        >
          <span
            aria-label="question-circle"
            class="anticon anticon-question-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          FLUX Credit:
          <svgr-url />
          <span
            class="flux-credit"
          >
            4
          </span>
        </div>
        <div
          class="credit-container"
        >
          <span
            aria-label="question-circle"
            class="anticon anticon-question-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          AI Credit:
          <svgr-url />
          <span
            class="ai-credit"
          >
            29.5
          </span>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Go to Member Center
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
  </mock-fluxplusmodal>
</div>
`;

exports[`test FluxCredit should render correctly without user detail 1`] = `
<div>
  <mock-fluxplusmodal>
    <div
      class="content"
    >
      <div
        class="head"
      >
        <div
          class="title"
        >
          Logged in
        </div>
        <div
          class="subtitle"
        >
          Thanks for being a valued member!
        </div>
      </div>
      <div
        class="info"
      >
        <div>
          Email
          : 
          <span
            class="email"
          >
            test123@gmail.com
          </span>
        </div>
        <div
          class="credit-container"
        >
          <span
            aria-label="question-circle"
            class="anticon anticon-question-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          AI Credit:
          <svgr-url />
          <span
            class="ai-credit"
          >
            0
          </span>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Go to Member Center
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
  </mock-fluxplusmodal>
</div>
`;
